--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "html-react-parser": "^0.8.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-awesome-modal": "^2.0.5",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
